<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="use_phone"
        android:summaryOff="@string/use_phone_summ_off"
        android:summaryOn="@string/use_phone_summ_on"
        android:title="@string/settings_use_phone_title"
        />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="use_email"
        android:summaryOff="@string/use_email_summ_off"
        android:summaryOn="@string/use_email_summ_on"
        android:title="@string/settings_use_email_title"
        />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="use_search"
        android:summaryOff="@string/use_search_summ_off"
        android:summaryOn="@string/use_search_summ_on"
        android:title="@string/settings_use_search_title"
        />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="use_fb"
        android:summaryOff="@string/use_fb_summ_off"
        android:summaryOn="@string/use_fb_summ_on"
        android:title="@string/settings_use_fb_title"
        />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="use_twitter"
        android:summaryOff="@string/use_twitter_summ_off"
        android:summaryOn="@string/use_twitter_summ_on"
        android:title="@string/settings_use_twitter_title"
        />
</PreferenceScreen>